[package]
name = "demsos"
version = "0.1.0"
edition = "2021"
description = "Desmos command-line image uploader."
documentation = "https://docs.rs/demsos"
readme = "README.md"
repository = "https://github.com/7ap/demsos"
license = "MIT"

[dependencies]
base64 = "0.13.0"
clap = { version = "4.0.15", features = ["derive"] }
image = "0.24.4"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
